criando validação no campo email

--- a/src/main/resources/templates/usuariosCriar.html
+++ b/src/main/resources/templates/usuariosCriar.html
@@ -33,6 +33,16 @@
                 <input th:field="*{nome}" type="text" class="form-control" id="exampleInputNome" >
 
             </div>
+
+            <div class="mb-3">
+                <label for="exampleInputEmail" class="form-label">Email</label>
+                <input th:field="*{email}" type="email" class="form-control" id="exampleInputEmail" >
+
+               <!--- MENSSAGEM DE ERRO - VALIDAÇÃO DO EMAIL--->
+
+               
+
+            </div>
             <div class="mb-3">
                 <label for="exampleInputIdade" class="form-label">Idade</label>
                 <input th:field="*{idade}" type="number" class="form-control" id="exampleInputIdade">
