--- a/src/main/resources/templates/usuariosEditar.html
+++ b/src/main/resources/templates/usuariosEditar.html
@@ -34,9 +34,18 @@
 
             </div>
 
+
+
             <div class="mb-3">
                 <label for="exampleInputNome" class="form-label">Nome</label>
                 <input th:field="*{nome}" type="text" class="form-control" id="exampleInputNome" >
+
+            </div>
+
+
+            <div class="mb-3">
+                <label for="exampleInputEmail" class="form-label">Email</label>
+                <input th:field="*{email}" type="email" class="form-control" id="exampleInputEmail" >
 
             </div>
             <div class="mb-3">
