validação do campo email -> uma das formas de fazer validações

--- a/src/main/resources/templates/usuariosCriar.html
+++ b/src/main/resources/templates/usuariosCriar.html
@@ -40,7 +40,7 @@
 
                <!--- MENSSAGEM DE ERRO - VALIDAÇÃO DO EMAIL--->
 
-               
+                <div class="text-danger text-center" th:text="${erroEmailMessage}"></div>
 
             </div>
             <div class="mb-3">
